--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Colorlib App - App Landing Page</title>
+    <title>Beat Promotions</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -75,7 +75,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12 col-md">
                     <div class="wellcome-heading">
-                        <h2>Colorlib app</h2>
+                        <h2>Beat Promotions</h2>
                         <h3>C</h3>
                         <p>Everything You Need. To Start Selling Online Beautifully</p>
                     </div>
