--- a/index.html
+++ b/index.html
@@ -43,25 +43,13 @@
                             <div class="collapse navbar-collapse" id="ca-navbar">
                                 <ul class="navbar-nav ml-auto" id="nav">
                                     <li class="nav-item active"><a class="nav-link" href="#home">Home</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#screenshot">Screenshot</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#pricing">Pricing</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#about">Sobre Nós</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#features">Jobs</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#team">Equipe</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#contact">Contato</a></li>
                                 </ul>
-                                <div class="sing-up-button d-lg-none">
-                                    <a href="#">Sign Up Free</a>
-                                </div>
                             </div>
                         </nav>
-                    </div>
-                </div>
-                <!-- Signup btn -->
-                <div class="col-12 col-lg-2">
-                    <div class="sing-up-button d-none d-lg-block">
-                        <a href="#">Sign Up Free</a>
                     </div>
                 </div>
             </div>
@@ -76,16 +64,9 @@
                 <div class="col-12 col-md">
                     <div class="wellcome-heading">
                         <h2>Beat Promotions</h2>
-                        <h3>C</h3>
-                        <p>Everything You Need. To Start Selling Online Beautifully</p>
-                    </div>
-                    <div class="get-start-area">
-                        <!-- Form Start -->
-                        <form action="#" method="post" class="form-inline">
-                            <input type="email" class="form-control email" placeholder="name@company.com">
-                            <input type="submit" class="submit" value="Get Started">
-                        </form>
-                        <!-- Form End -->
+                        <h3>B</h3>
+                        <p>Mantenha seu público atualizado sobre seus lançamentos, shows e outros projetos. Planejamos e executamos as melhores
+                        estratégias de marketing digital para a sua carreira ou empresa.</p>
                     </div>
                 </div>
             </div>
@@ -104,7 +85,7 @@
                 <div class="col-12">
                     <!-- Section Heading Area -->
                     <div class="section-heading text-center">
-                        <h2>Why Is It Special</h2>
+                        <h2>Social Media</h2>
                         <div class="line-shape"></div>
                     </div>
                 </div>
@@ -117,8 +98,9 @@
                         <div class="single-icon">
                             <i class="ti-mobile" aria-hidden="true"></i>
                         </div>
-                        <h4>Easy to use</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <h4>Criatividade</h4>
+                        <p>Criamos publicações segmentadas com objetivo de gerar engajamento, conhecimento de marcas, divulgação de eventos e
+                        lançamentos.</p>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -127,8 +109,9 @@
                         <div class="single-icon">
                             <i class="ti-ruler-pencil" aria-hidden="true"></i>
                         </div>
-                        <h4>Powerful Design</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <h4>Design</h4>
+                        <p>Contamos com uma equipe de criação para desenvolvimento de flyers, vídeos e outras peças de divulgação de maneira
+                        criativa, interativa e inteligente.</p>
                     </div>
                 </div>
                 <!-- Single Special Area -->
@@ -137,8 +120,9 @@
                         <div class="single-icon">
                             <i class="ti-settings" aria-hidden="true"></i>
                         </div>
-                        <h4>Customizability</h4>
-                        <p>We build pretty complex tools and this allows us to take designs and turn them into functional quickly and easily</p>
+                        <h4>Ferramentas</h4>
+                        <p>Estamos antenados em todas novidades das redes sociais e ferramentas digitais para manter a sua empresa atualizada com
+                        as melhores novidades do mercado.</p>
                     </div>
                 </div>
             </div>
@@ -154,24 +138,10 @@
                     </div>
                     <div class="col-lg-6 col-xl-5 ml-xl-auto">
                         <div class="special_description_content">
-                            <h2>Our Best Propositions for You!</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                            <div class="app-download-area">
-                                <div class="app-download-btn wow fadeInUp" data-wow-delay="0.2s">
-                                    <!-- Google Store Btn -->
-                                    <a href="#">
-                                        <i class="fa fa-android"></i>
-                                        <p class="mb-0"><span>available on</span> Google Store</p>
-                                    </a>
-                                </div>
-                                <div class="app-download-btn wow fadeInDown" data-wow-delay="0.4s">
-                                    <!-- Apple Store Btn -->
-                                    <a href="#">
-                                        <i class="fa fa-apple"></i>
-                                        <p class="mb-0"><span>available on</span> Apple Store</p>
-                                    </a>
-                                </div>
-                            </div>
+                            <h2>Conteúdo de Qualidade para Você!</h2>
+                            <p>Captamos a essência do seu negócio e transformamos em conteúdo e conexão do seu público com a sua marca. Captamos o
+                            material in loco com nossa equipe de fotografia e filmagem e depois de prepararmos tudo, criamos conteúdo de qualidade
+                            para as suas mídias digitais utilizando linguagem criativa e a linguagem universal, os memes!</p>
                         </div>
                     </div>
                 </div>
