Novas cores e BG

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <div class="menu_area">
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <!-- Logo -->
-                            <a class="navbar-brand" href="#">Ca.</a>
+                            <!-- <a class="navbar-brand" href="#">Ca.</a> -->
+                            <img src="img/core-img/logo.png" alt="Beat Promotions">
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ca-navbar" aria-controls="ca-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                             <!-- Menu Area -->
                             <div class="collapse navbar-collapse" id="ca-navbar">
@@ -64,9 +65,8 @@
                 <div class="col-12 col-md">
                     <div class="wellcome-heading">
                         <h2>Beat Promotions</h2>
-                        <h3>B</h3>
-                        <p>Mantenha seu público atualizado sobre seus lançamentos, shows e outros projetos. Planejamos e executamos as melhores
-                        estratégias de marketing digital para a sua carreira ou empresa.</p>
+                        <p>Mantenha seu público atualizado sobre seus lançamentos, shows e outros projetos. Planejamos e executamos</p> 
+                        <p>as melhores estratégias de marketing digital para a sua carreira ou empresa.</p>
                     </div>
                 </div>
             </div>
