--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                 <div class="col-12 text-center">
                     <!-- Heading Text  -->
                     <div class="section-heading">
-                        <h2>Our Team</h2>
+                        <h2>Nossa Equipe</h2>
                         <div class="line-shape"></div>
                     </div>
                 </div>
