Melhor visibilidade do texto

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <div class="col-12 col-md">
                     <div class="wellcome-heading">
                         <h2>Beat Promotions</h2>
-                        <p>Mantenha seu público atualizado sobre seus lançamentos, shows e outros projetos. Planejamos e executamos</p> 
-                        <p>as melhores estratégias de marketing digital para a sua carreira ou empresa.</p>
+                        <p>Mantenha seu público atualizado sobre seus lançamentos, shows e outros projetos.</p> 
+                        <p>Planejamos e executamos as melhores estratégias de marketing digital para a sua carreira ou empresa.</p>
                     </div>
                 </div>
             </div>
