--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <!-- Logo -->
                             <a href="https://beatpromotions.com.br">
-                                <img src="img/core-img/logo.png" alt="Beat Promotions" title="Beat Promotions">
+                                <img class="logo-topo" src="img/core-img/logo.png" alt="Beat Promotions" title="Beat Promotions">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ca-navbar" aria-controls="ca-navbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                             <!-- Menu Area -->
@@ -145,7 +145,7 @@
                 <div class="row">
                     <div class="col-lg-6 margin-top">
                         <div class="special_description_img">
-                            <img src="img/bg-img/special.png" alt="">
+                            <img class="special-img" src="img/bg-img/special.png" alt="Beat Promotions">
                         </div>
                     </div>
                     <div class="col-lg-6 col-xl-5 ml-xl-auto">
