--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <p><span>Telefone:</span> ++55 (11) 999225-2034</p>
                     </div>
                     <div class="email-text">
-                        <p><span>Email:</span> beatsocialpromotions@gmail.com</p>
+                        <p><span>Email:</span> contato@beatpromotions.com.br</p>
                     </div>
                 </div>
                 <div class="col-md-6">
