--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         <!-- Foooter Text-->
         <div class="copyright-text">
             <!-- ***** Removing this text is now allowed! This template is licensed under CC BY 3.0 ***** -->
-            <p>Copyright ©2019 Beat Promotions. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+            <p>Copyright ©2019 Beat Promotions.</p>
         </div>
     </footer>
     <!-- ***** Footer Area Start ***** -->
